WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159824
Repaints rects drawn incorrectly when inspecting a WebView on a Retina display
https://bugs.webkit.org/show_bug.cgi?id=159824
Summary
Repaints rects drawn incorrectly when inspecting a WebView on a Retina display
Simon Fraser (smfr)
Reported
2016-07-15 12:02:06 PDT
Repaints rects drawn incorrectly when inspecting a WebView on a Retina display
Attachments
Patch
(1.83 KB, patch)
2016-07-15 12:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-07-15 12:04:15 PDT
Created
attachment 283778
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2016-07-15 12:05:27 PDT
<
rdar://problem/27377006
>
Blaze Burg
Comment 3
2016-07-15 12:34:38 PDT
Comment on
attachment 283778
[details]
Patch r=me I suppose the code path is different for a WKView / WKWebView, which is why this doesn't repro in WK2 clients?
WebKit Commit Bot
Comment 4
2016-07-15 18:44:44 PDT
Comment on
attachment 283778
[details]
Patch Clearing flags on attachment: 283778 Committed
r203317
: <
http://trac.webkit.org/changeset/203317
>
WebKit Commit Bot
Comment 5
2016-07-15 18:44:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug