Repaints rects drawn incorrectly when inspecting a WebView on a Retina display https://bugs.webkit.org/show_bug.cgi?id=159824 rdar://problem/27376305

Reviewed by Brian Burg.

InspectorOverlayPage.js set up the canvases with a deviceScaleFactor passed into
reset(), which comes from the overlay's m_page.deviceScaleFactor(). However, updatePaintRects()
used window.devicePixelRatio which was always 1.

Fix by setting the deviceScaleFactor on the m_overlayPage.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::overlayPage):


Canonical link: https://commits.webkit.org/178007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203317 268f45cc-cd09-0410-ab3c-d52691b4dbfc